doing some bug and name overlaping

--- a/main/mainv2/guesswhat/chickenbutt/burgerwopperwithUturnSignsForLifeonchair/style.css
+++ b/main/mainv2/guesswhat/chickenbutt/burgerwopperwithUturnSignsForLifeonchair/style.css
@@ -51,7 +51,7 @@
     animation: glitch 0.5s infinite;
 }
 
-@keyframes glitch {
+@keyframes glitchyy {
     0% {
       transform: translate(0);
     }
